primitives/npos-elections/solution-type/tests/ui/fail/no_annotations.stderr
error: Expected binding: `VoterIndex = ...`
 --> $DIR/no_annotations.rs:4:2
  |
4 |     u16,
  |     ^^^
